select first available category